data/all_generated_tests/raw_wast_tests/nop_ImproperFunctionCallorReturnHandling_611.wast
;; 2. **Test Description 2**:    - **Scenario**: Place a `nop` instruction immediately after a `call` to a function that returns a value.    - **Constraint Check**: Ensure the return value is correctly passed back without being affected by the preceding `nop`.    - **Relation to Improper Handling**: Verifies that `nop` does not interfere with return values correctly landing on the top of the stack.

(assert_invalid
  (module
    (func $returns_i32 (result i32)
      i32.const 42
    )
    (func $test (result i32)
      call $returns_i32
      nop
    )
  )
  "type mismatch"
)